--- a/index.html
+++ b/index.html
@@ -1,188 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Catch My Love ❤️</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: "Segoe UI", sans-serif;
-      background: linear-gradient(to top, #ff9a9e, #fad0c4);
-      overflow: hidden;
-    }
+<meta charset="UTF-8">
+<title>Happy Birthday Shakthi ❤️</title>
+<style>
+  body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Segoe UI', sans-serif;
+    background: linear-gradient(to bottom, #ff9a9e, #fad0c4);
+    overflow: hidden;
+    text-align: center;
+    height: 100vh;
+    color: #fff;
+  }
 
-    #gameArea {
-      position: relative;
-      width: 100vw;
-      height: 100vh;
-      overflow: hidden;
-    }
+  .container {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    z-index: 2;
+  }
 
-    #player {
-      position: absolute;
-      bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      font-size: 50px;
-    }
+  h1 {
+    font-size: 2.8em;
+    margin-bottom: 20px;
+    display: none;
+    animation: shimmer 2s infinite;
+    max-width: 900px;
+    margin-left: auto;
+    margin-right: auto;
+    color: #fff;
+    -webkit-text-stroke: 1.5px black;
+    font-weight: bold;
+  }
 
-    .falling {
-      position: absolute;
-      font-size: 30px;
-      animation: fall linear;
-    }
+  @keyframes shimmer {
+    0%, 100% { text-shadow: 0 0 10px #ff6b6b; }
+    50% { text-shadow: 0 0 20px #ffd1dc; }
+  }
 
-    @keyframes fall {
-      from { top: -50px; }
-      to { top: 100vh; }
-    }
+  .heart-lock {
+    font-size: 80px;
+    cursor: pointer;
+    animation: pulse 1.5s infinite;
+    margin-bottom: 20px;
+  }
 
-    #scoreBoard, #livesBoard {
-      position: absolute;
-      top: 20px;
-      font-size: 1.2em;
-      font-weight: bold;
-      color: #fff;
-    }
+  @keyframes pulse {
+    0% { transform: scale(1); }
+    50% { transform: scale(1.2); }
+    100% { transform: scale(1); }
+  }
 
-    #scoreBoard { left: 20px; }
-    #livesBoard { right: 20px; }
+  .message {
+    font-size: 1.5em;
+    max-width: 800px;
+    margin: 20px auto;
+    opacity: 0;
+    transition: opacity 1s, text-shadow 1s;
+    line-height: 1.5em;
+    color: #fff;
+    -webkit-text-stroke: 1px black;
+    font-weight: bold;
+  }
 
-    #message {
-      position: absolute;
-      top: 40%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      font-size: 1.5em;
-      font-weight: bold;
-      color: #d6336c;
-      display: none;
-      text-align: center;
-      max-width: 500px;
-    }
+  .btn-game {
+    display: none;
+    margin-top: 30px;
+    padding: 15px 30px;
+    background: #ff6b6b;
+    color: #fff;
+    font-size: 1.2em;
+    font-weight: bold;
+    border-radius: 30px;
+    text-decoration: none;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+    transition: 0.3s;
+    animation: pulseBtn 2s infinite;
+    -webkit-text-stroke: 1px black;
+  }
 
-    button {
-      margin-top: 20px;
-      padding: 10px 20px;
-      font-size: 1em;
-      background: #ff6b6b;
-      color: white;
-      border: none;
-      border-radius: 20px;
-      cursor: pointer;
-      transition: 0.3s;
-    }
+  @keyframes pulseBtn {
+    0%, 100% { transform: scale(1); }
+    50% { transform: scale(1.05); }
+  }
 
-    button:hover {
-      background: #ff4757;
-    }
-  </style>
+  .heart { position: absolute; color: pink; font-size: 20px; animation: float linear infinite; }
+  @keyframes float { 0% { transform: translateY(100vh) rotate(0deg); opacity:1;} 100%{transform:translateY(-100px) rotate(360deg);opacity:0;} }
+
+  .confetti { position: absolute; width: 10px; height: 10px; background: gold; top: 0; animation: confettiFall linear infinite; }
+  @keyframes confettiFall {0% {transform: translateY(0) rotate(0deg);opacity:1;} 100%{transform: translateY(100vh) rotate(720deg);opacity:0;}}
+
+  .balloon { position: absolute; font-size: 30px; animation: balloonRise linear infinite; }
+  @keyframes balloonRise {0% {transform: translateY(100vh);opacity:1;} 100% {transform: translateY(-100px);opacity:0;} }
+
+  .portrait { position: absolute; border-radius: 15px; box-shadow:0 4px 15px rgba(0,0,0,0.3); opacity:0; transition:opacity 1.5s ease; }
+
+  #img1 { top: 10%; left: 10%; width: 180px; }
+  #img2 { top: 5%; right: 10%; width: 180px; }
+  #img3 { bottom: 10%; left: 12%; width: 150px; }
+  #img4 { bottom: 12%; right: 12%; width: 150px; }
+  #img5 { top: 30%; left: 45%; width: 200px; }
+  #img6 { bottom: 20%; right: 15%; width: 200px; }
+</style>
 </head>
 <body>
-  <div id="gameArea">
-    <div id="scoreBoard">Score: 0</div>
-    <div id="livesBoard">Lives: 3</div>
-    <div id="player">🧸</div>
-    <div id="message">
-      <button onclick="location.reload()">Play Again</button>
-    </div>
+  <div class="container">
+    <div class="heart-lock" id="heartLock">💖</div>
+    <h1 id="title">Happy Birthday, my Shakthi! 🎉❤️</h1>
+
+    <p class="message" id="msg1">
+      Shakthi isn’t just your name; you are the living power that moves my heart. Like the divine energy that sustains the universe, your love gives meaning to my life.
+    </p>
+    <p class="message" id="msg2">
+      You are my dawn’s first light, my soul’s strength, and the gentle force that turns every ordinary moment into something magical.
+    </p>
+    <p class="message" id="msg3">
+      Happy Birthday, my Shakthi.
+    </p>
+
+    <a href="Game.html" class="btn-game" id="gameBtn">🎮 Play Your Surprise Game 🎁</a>
   </div>
 
+  <img src="img1.jpg" class="portrait" id="img1">
+  <img src="img2.jpg" class="portrait" id="img2">
+  <img src="img3.jpg" class="portrait" id="img3">
+  <img src="img4.jpg" class="portrait" id="img4">
+  <img src="img5.jpg" class="portrait" id="img5">
+  <img src="img6.jpg" class="portrait" id="img6">
+
   <script>
-    const gameArea = document.getElementById("gameArea");
-    const player = document.getElementById("player");
-    const scoreBoard = document.getElementById("scoreBoard");
-    const livesBoard = document.getElementById("livesBoard");
-    const message = document.getElementById("message");
+    const heartLock = document.getElementById("heartLock");
+    const title = document.getElementById("title");
+    const messages = [document.getElementById("msg1"), document.getElementById("msg2"), document.getElementById("msg3")];
+    const gameBtn = document.getElementById("gameBtn");
+    const portraits = [document.getElementById("img1"), document.getElementById("img2"), document.getElementById("img3"), document.getElementById("img4"), document.getElementById("img5"), document.getElementById("img6")];
 
-    let score = 0;
-    let lives = 3;
-    let gameOver = false;
+    function createHeart() { const heart=document.createElement("div"); heart.classList.add("heart"); heart.innerHTML="💖"; heart.style.left=Math.random()*window.innerWidth+"px"; heart.style.fontSize=Math.random()*30+20+"px"; heart.style.animationDuration=Math.random()*3+4+"s"; document.body.appendChild(heart); setTimeout(()=>heart.remove(),7000); }
+    function createBalloon(){ const balloon=document.createElement("div"); balloon.classList.add("balloon"); const colors=["🎈","🎉","🎀"]; balloon.innerHTML=colors[Math.floor(Math.random()*colors.length)]; balloon.style.left=Math.random()*window.innerWidth+"px"; balloon.style.animationDuration=Math.random()*4+5+"s"; document.body.appendChild(balloon); setTimeout(()=>balloon.remove(),7000);}
+    function createConfetti(){ const confetti=document.createElement("div"); confetti.classList.add("confetti"); confetti.style.left=Math.random()*window.innerWidth+"px"; confetti.style.background=['#FFD700','#FF69B4','#FF4500','#00CED1'][Math.floor(Math.random()*4)]; confetti.style.width=confetti.style.height=Math.random()*10+5+"px"; document.body.appendChild(confetti); setTimeout(()=>confetti.remove(),5000);}
 
-    // Move player with mouse
-    document.addEventListener("mousemove", (e) => {
-      player.style.left = e.clientX - player.offsetWidth / 2 + "px";
+    heartLock.addEventListener("click", ()=>{
+      heartLock.style.display="none"; title.style.display="block";
+      setInterval(createHeart,300); setInterval(createConfetti,200); setInterval(createBalloon,1500);
+      messages.forEach((msg,index)=>{setTimeout(()=>{msg.style.opacity=1; msg.style.textShadow="0 0 10px #fffacd";},1500+index*2500)});
+      portraits.forEach((img,i)=>{setTimeout(()=>{img.style.opacity=1;},2000+i*500)});
+      setTimeout(()=>{gameBtn.style.display="inline-block";},10000);
     });
-
-    // Move player with keyboard arrows
-    document.addEventListener("keydown", (e) => {
-      let pos = player.offsetLeft;
-      if (e.key === "ArrowLeft" && pos > 0) player.style.left = pos - 40 + "px";
-      if (e.key === "ArrowRight" && pos < window.innerWidth - player.offsetWidth) player.style.left = pos + 40 + "px";
-    });
-
-    // Move player with touch (mobile)
-    document.addEventListener("touchmove", function(e) {
-      const touch = e.touches[0];
-      player.style.left = touch.clientX - player.offsetWidth / 2 + "px";
-    }, { passive: false });
-
-    // Item type
-    function getItemType() {
-      let rand = Math.random() * 100;
-      if (rand < 30) return "❤️";   // 30%
-      return "💔";                   // 70%
-    }
-
-    // Create items
-    function createItem() {
-      if (gameOver) return;
-      const item = document.createElement("div");
-      item.classList.add("falling");
-      let type = getItemType();
-      item.innerHTML = type;
-      item.style.left = Math.random() * (window.innerWidth - 30) + "px";
-      item.style.animationDuration = Math.random() * 2 + 3 + "s";
-      gameArea.appendChild(item);
-
-      let fallInterval = setInterval(() => {
-        let itemTop = item.offsetTop;
-        let itemLeft = item.offsetLeft;
-        let playerLeft = player.offsetLeft;
-        let playerTop = player.offsetTop;
-
-        // Collision detection
-        if (
-          itemTop + 30 >= playerTop &&
-          itemLeft > playerLeft - 30 &&
-          itemLeft < playerLeft + player.offsetWidth
-        ) {
-          if (type === "❤️") {
-            score++;
-            scoreBoard.textContent = "Score: " + score;
-            if (score >= 15) endGame(true);
-          } else if (type === "💔") {
-            lives--;
-            livesBoard.textContent = "Lives: " + lives;
-            if (lives <= 0) endGame(false);
-          }
-          item.remove();
-          clearInterval(fallInterval);
-        }
-
-        if (itemTop > window.innerHeight) {
-          item.remove();
-          clearInterval(fallInterval);
-        }
-      }, 50);
-
-      setTimeout(() => { if (item.parentNode) item.remove(); }, 6000);
-    }
-
-    let drop = setInterval(createItem, 800);
-
-    function endGame(win) {
-      clearInterval(drop);
-      document.querySelectorAll(".falling").forEach((h) => h.remove());
-      gameOver = true;
-      if (win) {
-        message.innerHTML = `Just like you ignored all the broken heart emojis right now, promise me to ignore it for the entire life, let there be no heartbreak between us and we'll live happily ever after. I love you.<br><button onclick="location.reload()">Play Again</button>`;
-      } else {
-        message.innerHTML = `Even if some hearts break along the way, I will always be here with you. Together we’ll turn every heartbreak into love, and nothing can shake us.<br><button onclick="location.reload()">Try Again</button>`;
-      }
-      message.style.display = "block";
-    }
   </script>
 </body>
 </html>
